HDFS-3626. Creating file with invalid path can corrupt edit log. Contributed by Todd Lipcon.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1365803 13f79535-47bb-0310-9956-ffa450edef68